# zai-test

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  jest.config.js  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ai-prompt-experiment.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml
_bmad-output/implementation-artifacts/: 1-1-basic-cli-setup-with-typer.md  1-2-configuration-management.md  2-1-mcq-question-generation.md  2-2-numerical-question-generation.md  2-3-case-based-question-generation.md  2-4-assertion-reason-question-generation.md  2-5-batch-question-generation.md  3-1-l1-mathematical-validation-with-sympy.md  3-2-l2-llm-basedquality-validation.md  3-3-multi-llm-adapter-support.md  4-1-basic-pdf-generation.md  4-2-neet-2-column-pdf-style.md  4-7-pdf-style-system.md  (+25 more)
docs/: index.md
github-ref-materials/: README.md  automation-tools.md  repo-structure-management.md
src/: index.ts
tests/: conftest.py  index.test.ts  test_api.py  test_assertion_reason.py  test_batch.py  test_case_based.py  test_cli.py  test_config.py  test_cost_management.py  test_diagram.py  test_kb.py  test_kb_features.py  test_l1_validator.py  test_l2_validator.py  test_language.py  test_license_checker.py  test_llm.py  test_mcq.py  test_memory.py  test_mimic.py  test_numerical.py  test_pdf.py  test_pdf_api.py  test_pdf_styles.py  test_performance.py  test_preview.py  test_progress.py  test_review_section.py  test_style_system.py  test_token_optimization.py  test_visual.py  test_visual_editor.py
(+179 files in other folders)
